feat: added the second type of challenge
